<resources>
    <string name="app_name">SmartButler</string>
    <string name="text_setting">设置</string>
    <string name="tab_butler">智能管家</string>
    <string name="tab_wechat">微信精选</string>
    <string name="tab_girl">美女社区</string>
    <string name="tab_user">个人中心</string>
    <string name="choose_avatar_album">相册</string>
    <string name="choose_avatar_camera">相机</string>
    <string name="cancel">取消</string>
    <string name="forget_password">忘记密码</string>
    <string name="deny_permission">拒绝权限将无法使用该功能!</string>
    <string name="courier_query">物流查询</string>
    <string name="courier_help">帮助</string>
    <string name="change_ok">确认修改</string>
    <string name="place_query">归属地查询</string>
    <string name="exit">退出登录</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="desc">简介</string>
    <string name="courier_company">快递公司代码</string>
    <string name="courier_number">订单号</string>
    <string name="query">查询</string>
    <string name="input_no_empty">输入框不能为空</string>
    <string name="content_text_limit">输入内容不能大于30字</string>
    <string name="phone_number_query">归属地查询</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">DEL</string>
    <string name="china_mobile">移动</string>
    <string name="china_unicom">联通</string>
    <string name="china_telecom">电信</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="send">发送</string>
    <string name="input_tip">请输入内容</string>
    <string name="robot_reply_error">你刚刚说的话宝宝没有成功收到啦QAQ</string>
    <string name="text_welfare">福利</string>
    <string name="voice_switch_title">管家语音回复</string>
    <string name="voice_switch_desc">智能管家回答时将文字用声音播报</string>
    <string name="sms_switch_title">短信提醒</string>
    <string name="sms_version_warning">此功能只适配Android6.0以上</string>
    <string name="sms_switch_content">开启此功能后在收到短信时会弹出提示框提醒</string>
    <string name="reply">回复</string>
    <string name="check_version">检查更新</string>
    <string name="update">更新</string>
    <string name="is_latest_version">当前已是最新版本</string>
    <string name="new_version_existed">检测到新版本</string>
    <string name="update_or_not">是否开始更新？</string>
    <string name="update_dialog_positive">更新</string>
    <string name="update_dialog_nagetive">取消</string>
    <string name="download_fail">下载失败</string>
    <string name="setting_item_scan_qrcode">扫一扫</string>
    <string name="setting_item_scan_qrcode_desc">点击启动二维码扫描功能</string>
    <string name="setting_item_my_qrcode">我的二维码</string>
    <string name="setting_item_my_qrcode_desc">点击生成我的二维码</string>
    <string name="textview_my_qrcode_content">请输入二维码显示的内容</string>
    <string name="btn_qrcode_ok">提交</string>
    <string name="activity_my_qrcode_label">生成二维码</string>
    <string name="setting_item_location_title">我的位置</string>
    <string name="setting_item_location_desc">在地图上显示当前位置</string>
    <string name="courier_help_content">顺丰-sf     申通-sto\n圆通-yt     韵达-yd\n天天-tt     EMS-ems\n中通-zto     汇通-ht\n
    全峰-qf     德邦-db\n国通-gt     如风达-rfd\n京东-jd     宅急送-zjs\n</string>
    <string name="courier_help_cancel">取消</string>
</resources>
