<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal" android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_avatar_album"
        android:layout_weight="1"
        android:background="@color/material_blue_grey_800"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="#ef3254"
        android:text="@string/choose_avatar_camera"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="#ef6d03"
        android:text="@string/cancel"/>

</LinearLayout>