<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="5dp">

    <EditText
        android:id="@+id/et_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_company"/>

    <EditText
        android:id="@+id/et_courier_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/courier_number"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:textColor="@android:color/white"
            android:text="@string/query"/>

        <Button
            android:id="@+id/btn_help"
            android:layout_width="0dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_start"
            android:textColor="@android:color/white"
            android:text="@string/courier_help"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_timeline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



</LinearLayout>